feat: Enhanced wifi positioning service with validation logging and improved testing
- Added comprehensive validation logging implementation
- Enhanced calculation details with detailed algorithm selection info
- Improved error handling and exception management
- Added new DTOs for better data structure (WifiAPData)
- Removed deprecated SignalPhysicsValidator service
- Enhanced test coverage with integration tests
- Updated documentation and test scripts
- Improved algorithm selection and positioning calculations